<resources>
    <string name="app_name">TestAppForEMSearchingWorkServise</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="reply">Откликнуться</string>
    <string name="liked">Для лайкнутой вакансии</string>
    <string name="usual">Для обычной вакансии из списка</string>
    <string name="search">Поиск</string>
    <string name="favourites">Избранное</string>
    <string name="replies">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="_145">145 вакансий</string>
    <string name="filter_by">По соответствию</string>
</resources>