<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_lupa_menu"
        android:title="@string/search" />
    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_heart_menu"
        android:title="@string/profile" />
    <item
        android:id="@+id/repliesFragment"
        android:icon="@drawable/ic_letter_menu"
        android:title="@string/replies" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_message_menu"
        android:title="@string/messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/profile" />
</menu>
